# box_plot_chart

./: Cargo.toml  Justfile  README.md  coverage.json  version.json5
benches/: benchmarks.rs
example/: example.json5
src/: lib.rs  quartile.rs
