[package]
name = "box_plot_chart"
version = "0.0.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
description = "A description of the project"
repository = "https://github.com/yourname/rust-cli-quickstart"
readme = "README.md"
keywords = ["version", "command-line", "development"]
categories = ["command-line-utilities", "development-tools"]
license = "Unlicense"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
colored = "^2.0.0"
hypermelon = "0.4.0"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "box_plot_chart"
path = "src/bin/box_plot_chart.rs"
