[package]
name = "box_plot_chart"
version = "2.1.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
description = "A description of the project"
repository = "https://github.com/jlyonsmith/box_plot_chart"
readme = "README.md"
keywords = ["chart", "command-line", "graph", "visualization"]
categories = ["command-line-utilities"]
license = "Unlicense"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "3.0.14", features = ["derive"] }
colored = "^2.0.0"
csv = "1.1.6"
easy-error = "1.0.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
svg = "0.17.0"
yansi = "1.0.1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "box-plot-chart"
path = "src/bin/box_plot_chart.rs"
